[gd_scene load_steps=4 format=3 uid="uid://kb6032ho4sqx"]

[ext_resource type="Texture2D" uid="uid://oucdusathm4r" path="res://icon.svg" id="1_dp738"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_oj4vi"]
[ext_resource type="Script" path="res://Scripts/volume_slider.gd" id="3_e40ws"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oj4vi")
metadata/_edit_use_anchors_ = true

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.311176
anchor_right = 0.688824
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="Logo" type="TextureRect" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0919003
anchor_top = 0.0868201
anchor_right = 0.906542
anchor_bottom = 0.383891
texture = ExtResource("1_dp738")
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21028
anchor_top = 0.488494
anchor_right = 0.788162
anchor_bottom = 0.59205
metadata/_edit_use_anchors_ = true

[node name="OptionsButton" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.334891
anchor_top = 0.641213
anchor_right = 0.665109
anchor_bottom = 0.724895
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.942469
anchor_right = 0.999997
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="OptionsPanel"]
layout_mode = 0
anchor_left = 0.947059
anchor_top = 0.922594
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="FullscreenToggle" type="CheckBox" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.101176
anchor_top = 0.512552
anchor_right = 0.115294
anchor_bottom = 0.537657
offset_top = -3.05176e-05
metadata/_edit_use_anchors_ = true

[node name="ResolutionButton" type="OptionButton" parent="OptionsPanel"]
layout_mode = 0
anchor_left = 0.103529
anchor_top = 0.41841
anchor_right = 0.177059
anchor_bottom = 0.450837
offset_right = -82.0
offset_bottom = -11.0
metadata/_edit_use_anchors_ = true

[node name="VolumeSlider-Master" type="HSlider" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.107059
anchor_top = 0.34728
anchor_right = 0.274118
anchor_bottom = 0.364017
max_value = 1.0
step = 0.001
script = ExtResource("3_e40ws")
bus_name = "Master"
metadata/_edit_use_anchors_ = true

[node name="VolumeSlider-Music" type="HSlider" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.107059
anchor_top = 0.322176
anchor_right = 0.274118
anchor_bottom = 0.338913
max_value = 1.0
step = 0.001
script = ExtResource("3_e40ws")
bus_name = "Music"
metadata/_edit_use_anchors_ = true

[node name="VolumeSlider-SFX" type="HSlider" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.107059
anchor_top = 0.375523
anchor_right = 0.274118
anchor_bottom = 0.39226
max_value = 1.0
step = 0.001
script = ExtResource("3_e40ws")
bus_name = "SFX"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MenuPanel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuPanel/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="button_down" from="MenuPanel/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="button_up" from="MenuPanel/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="pressed" from="OptionsPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="OptionsPanel/FullscreenToggle" to="." method="_on_fullscreen_toggle_toggled"]
[connection signal="item_selected" from="OptionsPanel/ResolutionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="OptionsPanel/VolumeSlider-Master" to="OptionsPanel/VolumeSlider-Master" method="_on_value_changed"]
[connection signal="value_changed" from="OptionsPanel/VolumeSlider-Music" to="OptionsPanel/VolumeSlider-Music" method="_on_value_changed"]
[connection signal="value_changed" from="OptionsPanel/VolumeSlider-SFX" to="OptionsPanel/VolumeSlider-SFX" method="_on_value_changed"]
